--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <body>
     
     <div class="greetings">
-        <span>💜</span>
-        <span>M</span>
-        <span>a</span>
+        <span>n</span>
+        <span>o</span>
+        <span>m</span>
+        <span>b</span>
         <span>r</span>
-        <span>i</span>
-        <span>💜</span>  
+        <span>e</span>  
     </div>
     <div class="description">
         <span>Dele al botón xd</span>
