--- a/index.html
+++ b/index.html
@@ -11,12 +11,10 @@
 <body>
     
     <div class="greetings">
-        <span>n</span>
-        <span>o</span>
-        <span>m</span>
-        <span>b</span>
-        <span>r</span>
-        <span>e</span>  
+        <span>N</span>
+        <span>a</span>
+        <span>t</span>
+        <span>a</span>
     </div>
     <div class="description">
         <span>Dele al botón xd</span>
