--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
 <body>
     
     <div class="greetings">
+        <span>❤️</span>
         <span>N</span>
         <span>a</span>
         <span>t</span>
         <span>a</span>
+        <span>❤️</span>
     </div>
     <div class="description">
-        <span>Dele al botón xd</span>
+        <span>Dale al botón</span>
     </div>
     <div class="button">
         <button>
